@@ -278,7 +278,7 @@ val ex1 : term = Ab ("x", I, Ap (Ap (V "+", V "x"), V "x"))
 #           val eval_checked : 'a env -> 'a checked -> int = <fun>
 #   val v2 : int = 6
 #                                             type pexp = PEXP
-type pval = PEXP
+type pval = PVAL
 type _ mode = Pexp : pexp mode | Pval : pval mode
 type ('a, 'b) tarr = TARR
 type tint = TINT
