@@ -16,13 +16,12 @@ type _ inline_t =
 #           type _ linkp = Nonlink : [ `Nonlink ] linkp | Maylink : inkind linkp
 #                           val inlineseq_from_astseq : ast_t list -> inkind inline_t list = <fun>
 #       type _ linkp2 = Kind : 'a linkp -> ([< inkind ] as 'a) linkp2
-#                         Characters 272-279:
-      | (Kind Maylink, Ast_Link lnk)    -> Link lnk
-              ^^^^^^^
-Error: This pattern matches values of type inkind linkp
-       but a pattern was expected which matches values of type
-         ([< inkind ] as 'a) linkp
-       Type inkind = [ `Link | `Nonlink ] is not compatible with type
-         'a = [< `Link | `Nonlink ] 
+#                         Characters 184-192:
+      | (Kind _, Ast_Text txt)    -> Text txt
+                                     ^^^^^^^^
+Error: This expression has type ([< inkind > `Nonlink ] as 'a) inline_t
+       but an expression was expected of type a inline_t
+       Type 'a = [< `Link | `Nonlink > `Nonlink ] is not compatible with type
+         a = [< `Link | `Nonlink ] 
        Types for tag `Nonlink are incompatible
 # 
